2006-11-??  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.0.4
	* New operator: showformat (Showinfo) [request: Helmuth Haak]
	* remap: initialize links.option (bug fix) [report: Luis Kornblueh]
	* update date/time conversion from udunits (bug fix) [report: Oliver Krueger]
	* input: bug fix
	* pstreamFindID: check pstreamptr->name before use (bug fix)
	* operatorInqModID: speed up
	* Version 1.0.5 released

2006-11-17  Ralf Quast  <ralf.quast@brockmann-consult.de>

	* New module: Tchill (tchill)
	* New module: Hi (hi)
	* New module: ECA Indices of Daily Temperature and Precipitation Extremes
	              (eca_cfd, eca_csu, eca_cwdi, eca_cwfi, eca_etr, eca_fd, 
	               eca_gsl, eca_hd, eca_hwdi, eca_hwfi, eca_id, eca_su,       
                       eca_tg10p, eca_tg90p, eca_tn10p, eca_tn90p,    
                       eca_tr, eca_tx10p, eca_tx90p,    
                       eca_cdd, eca_cwd, eca_r10mm, eca_r20mm,    
                       eca_r75p, eca_r75ptot, eca_r90p, eca_r90ptot,  
                       eca_r95p, eca_r95ptot, eca_r99p, eca_r99ptot,  
                       eca_rr1, eca_sdii, eca_fdns, eca_strwind)  

2006-11-06  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* processSelf: lock/unlock NumProcess (bug fix)
	* pstreamOpenRead: move mutex_unlock after cdoInqHistory
	* Version 1.0.4 released

2006-11-06  Ralf Quast  <ralf.quast@brockmann-consult.de>

	* New module: Ydrunstat (ydrun -min, -max, -sum, -mean, -avg, -qstd)
	* New module: Timpctl (tim-, hour-, day-, mon-, year- pctl)
	* New module: Selpctl (selpctl)
	* New module: Runpctl (runpctl)
	* New module: Seaspctl (seaspctl)
	* New module: Ydaypctl (ydaypctl)
	* New module: Ymonpctl (ymonpctl)
	* New module: Yseaspctl (yseaspctl)
	* New module: Ydrunpctl (ydrunpctl)
	* New operator: enspctl (Ensstat)
	* New operator: fldpctl (Fldstat)
	* New operator: zonpctl (Zonstat)
	* New operator: merpctl (Merstat)	
	