@@ -117,17 +117,19 @@ static char *NinfoHelp[] = {
 
 static char *ShowinfoHelp[] = {
     "NAME",
-    "    showcode, showvar, showstdname, showlevel, showyear, showmon, showdate, ",
-    "    showtime - Show variables, levels or times",
+    "    showformat, showcode, showvar, showstdname, showlevel, showyear, showmon, ",
+    "    showdate, showtime - Show variables, levels or times",
     "",
     "SYNOPSIS",
     "    <operator>  ifile",
     "",
     "DESCRIPTION",
     "    This module prints, according to the actual operator,",
-    "    the variables, levels or times of the input dataset.",
+    "    the format, variables, levels or times of the input dataset.",
     "",
     "OPERATORS",
+    "    showformat   Show file format",
+    "                 Prints the file format of the input dataset.",
     "    showcode     Show codes",
     "                 Prints the code number of all different variables.",
     "    showvar      Show variable names",
